# berrybot-ros2

./: .gitmodules  README.md  todo.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/base_cmake/share/ament_index/resource_index/parent_prefix_path/: base_cmake
ros2_ws/install/base_cmake/share/base_cmake/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/base_python/share/base_python/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/interfaces/include/interfaces/interfaces/action/: perception.h  perception.hpp
ros2_ws/install/interfaces/include/interfaces/interfaces/action/detail/: perception__builder.hpp  perception__functions.h  perception__rosidl_typesupport_fastrtps_cpp.hpp  perception__rosidl_typesupport_introspection_c.h  perception__struct.h  perception__traits.hpp  perception__type_support.c  perception__type_support.cpp
ros2_ws/install/interfaces/include/interfaces/interfaces/msg/detail/: yolo_detection__functions.h  yolo_detection__rosidl_typesupport_fastrtps_c.h  yolo_detection__rosidl_typesupport_fastrtps_cpp.hpp  yolo_detection__rosidl_typesupport_introspection_c.h  yolo_detection__traits.hpp  (+2 more)
ros2_ws/install/interfaces/share/ament_index/resource_index/rosidl_interfaces/: interfaces
ros2_ws/install/interfaces/share/interfaces/: local_setup.sh  package.sh  package.xml
ros2_ws/install/interfaces/share/interfaces/action/: Perception.idl
ros2_ws/install/interfaces/share/interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_interfaces__rosidl_generator_pyExport.cmake  export_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  interfaces__rosidl_typesupport_cppExport.cmake  interfaces__rosidl_typesupport_introspection_cExport.cmake  interfaces__rosidl_typesupport_introspection_cppExport.cmake
ros2_ws/install/interfaces/share/interfaces/msg/: YoloDetection.msg
ros2_ws/install/simple_yolo/lib/simple_yolo/: camera  camera_publisher  perception_node
ros2_ws/install/simple_yolo/share/simple_yolo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/base_cmake/: CMakeLists.txt
ros2_ws/src/base_python/: package.xml  setup.cfg  setup.py
ros2_ws/src/interfaces/: CMakeLists.txt
ros2_ws/src/interfaces/action/: Perception.action
ros2_ws/src/simple_yolo/: package.xml  setup.cfg  setup.py
ros2_ws/src/simple_yolo/simple_yolo/: camera.py  perception_client.py  perception_node.py
simple_vision/: test.py
(+5 files in other folders)
