<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_yolo</name>
  <version>0.0.0</version>
  <description>simple_yolo_pkg</description>
  <maintainer email="eric.mjkim35@gmail.com">mj</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>interfaces</build_depend>

 <!-- Runtime dependencies -->
 <exec_depend>rclpy</exec_depend>
 <exec_depend>cv_bridge</exec_depend>
 <exec_depend>sensor_msgs</exec_depend>
 <exec_depend>interfaces</exec_depend>

 <!-- YOLO dependency (if using pip inside virtualenv or system-wide) -->
 <exec_depend>python3-numpy</exec_depend>
 <exec_depend>python3-opencv</exec_depend>

 <!-- If you're using ROS 2 launch files -->
 <exec_depend>launch</exec_depend>
 <exec_depend>launch_ros</exec_depend>


 <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
